--- a/1.ipynb
+++ b/1.ipynb
@@ -168,6 +168,23 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b6e4749",
+   "metadata": {},
+   "source": [
+    "Chain code, \n",
+    "hue moments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a27abd8a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
